// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client"
  output   = "../app/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

// User model
// id should match Supabase auth user UUID
model User {
  id        String   @id // Supabase auth UUID (no default, must be provided)
  email     String   @unique
  name      String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  accounts         Account[]
  transactions     Transaction[]
  categories       Category[]
  budgets          Budget[]
  recurring        RecurringCharge[]
  interestPayments InterestPayment[]
  balanceSnapshots AccountBalanceSnapshot[]
}

// Financial Account (bank account, credit card, loan, etc.)
model Account {
  id        String      @id @default(cuid())
  name      String
  type      String      // CHECKING, SAVINGS, CREDIT_CARD, LOAN, INVESTMENT
  balance   Decimal     @default(0)
  currency  String      @default("USD")

  // Credit card specific fields
  creditLimit Decimal?
  apr         Decimal? // Annual Percentage Rate

  // Loan specific fields
  loanAmount       Decimal? // Original loan amount
  remainingBalance Decimal? // Remaining balance on loan
  loanTerm         Int?     // Term in months
  monthlyPayment   Decimal? // Fixed monthly payment amount

  userId    String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user             User                     @relation(fields: [userId], references: [id], onDelete: Cascade)
  transactions     Transaction[]
  recurring        RecurringCharge[]
  interestPayments InterestPayment[]
  balanceSnapshots AccountBalanceSnapshot[]

  @@index([userId])
  @@index([type])
}

// Transaction
model Transaction {
  id          String          @id @default(cuid())
  amount      Decimal
  description String?
  date        DateTime        @default(now())
  type        String          // INCOME, EXPENSE, TRANSFER, INTEREST_CHARGE, LOAN_PAYMENT
  notes       String?
  isRecurring Boolean         @default(false)

  accountId   String
  categoryId  String?
  userId      String
  recurringId String?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user      User             @relation(fields: [userId], references: [id], onDelete: Cascade)
  account   Account          @relation(fields: [accountId], references: [id], onDelete: Cascade)
  category  Category?        @relation(fields: [categoryId], references: [id], onDelete: SetNull)
  recurring RecurringCharge? @relation(fields: [recurringId], references: [id], onDelete: SetNull)

  @@index([userId])
  @@index([accountId])
  @@index([categoryId])
  @@index([date])
  @@index([type])
}

// Category for transactions
model Category {
  id        String   @id @default(cuid())
  name      String
  color     String?
  icon      String?
  userId    String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user         User              @relation(fields: [userId], references: [id], onDelete: Cascade)
  transactions Transaction[]
  budgets      Budget[]
  recurring    RecurringCharge[]

  @@unique([userId, name])
  @@index([userId])
}

// Budget
model Budget {
  id         String    @id @default(cuid())
  amount     Decimal
  period     String    // monthly, weekly, yearly
  categoryId String?
  userId     String
  startDate  DateTime
  endDate    DateTime?
  createdAt  DateTime  @default(now())
  updatedAt  DateTime  @updatedAt

  user     User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  category Category? @relation(fields: [categoryId], references: [id], onDelete: SetNull)

  @@index([userId])
  @@index([categoryId])
}

// Recurring Charges/Subscriptions
model RecurringCharge {
  id          String   @id @default(cuid())
  name        String
  amount      Decimal
  frequency   String   // weekly, biweekly, monthly, quarterly, yearly
  nextDueDate DateTime

  accountId  String
  categoryId String
  userId     String

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  account      Account       @relation(fields: [accountId], references: [id], onDelete: Cascade)
  category     Category      @relation(fields: [categoryId], references: [id], onDelete: Cascade)
  user         User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  transactions Transaction[]

  @@index([userId, nextDueDate])
}

// Interest Payment tracking (for credit cards and loans)
model InterestPayment {
  id        String   @id @default(cuid())
  amount    Decimal
  date      DateTime
  month     Int      // Month number (1-12)
  year      Int      // Year

  accountId String
  userId    String

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  account Account @relation(fields: [accountId], references: [id], onDelete: Cascade)
  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([accountId])
  @@index([year, month])
}

// Account Balance Snapshots for historical balance tracking
// Records the balance of an account at a specific point in time
// Used for charting account balances over time
model AccountBalanceSnapshot {
  id      String   @id @default(cuid())
  balance Decimal  // The account balance at this point in time
  date    DateTime // The date/time this balance was recorded (typically start or end of day)

  accountId String
  userId    String

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  account Account @relation(fields: [accountId], references: [id], onDelete: Cascade)
  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([accountId, date]) // One snapshot per account per date
  @@index([userId])
  @@index([accountId, date])
}
